--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,29 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.8.1'
 }
 
 repositories {
     mavenCentral()
 }
 
+def allureVersion = "2.13.8",
+    selenideVersion = "5.22.0",
+    junitVersion = "5.7.2"
+
+allure {
+    version = allureVersion
+    autoconfigure = true
+    aspectjweaver = true
+    configuration = "testImplementation"
+    useJUnit5 {
+        version = allureVersion
+    }
+}
+
 dependencies {
-    testImplementation (
-            "com.codeborne:selenide:5.21.0",
+    testImplementation(
+            "com.codeborne:selenide:5.22.0",
             "org.junit.jupiter:junit-jupiter-api:5.7.1",
             "com.github.javafaker:javafaker:1.0.2",
             "org.slf4j:slf4j-api:1.7.30",
