Add attach + video config

--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,27 @@ dependencies {
     testImplementation(
             "com.codeborne:selenide:5.22.0",
             "org.junit.jupiter:junit-jupiter-api:5.7.1",
+            "io.qameta.allure:allure-selenide:$allureVersion",
             "com.github.javafaker:javafaker:1.0.2",
             "org.slf4j:slf4j-api:1.7.30",
             "org.slf4j:slf4j-simple:1.7.30")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
 }
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    sourceCompatibility = 11
+    targetCompatibility = 11
+}
 
-test {
+tasks.withType(Test) {
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+//            events "started", "failed"
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
 }
 
