--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,14 @@ allure {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:5.22.0",
-            "org.junit.jupiter:junit-jupiter-api:5.7.1",
+            "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "com.github.javafaker:javafaker:1.0.2",
-            "org.slf4j:slf4j-api:1.7.30",
-            "org.slf4j:slf4j-simple:1.7.30")
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
+
+            "org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
+
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
     sourceCompatibility = 11
