--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,11 @@ allure {
 }
 
 dependencies {
+    compile "org.aspectj:aspectjweaver:1.9.2"
     testImplementation(
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "com.github.javafaker:javafaker:1.0.2",
-
             "org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
